2007-12-19 Mario Limonciello <superm1@ubuntu.com>
        * ati-packager.sh
        - Add optional LSB release detection support.
        - Any invalid releases will automatically fall
          back to LSB release detection for selection.

2007-12-11 Mario Limonciello <superm1@ubuntu.com>
        * ati-packager.sh
        - Remove old distros and add hardy

2007-12-10 Mario Limonciello <superm1@ubuntu.com>
        * dists/{hardy, gutsy}
        - Force install dkms built drivers in case
          they were wanting it reinstalled.
        * (re)-Correct typo for s/quite/quiet/
        * dists/hardy

2007-12-06 Laurent Bigonville <bigon@bigon.be>

	* dists/hardy/driver.atieventsd.init
	- Use LSB output instead of simple echo and depends on lsb-base.
	* dists/hardy/control
	- Drop explicit dependency on libstdc++5

2007-12-06  Mario Limonciello <superm1@ubuntu.com>
	* Drop old unsupported distros
	- Breezy
	- Warty
	- Hoary
	* dist/hardy/driver.atieventd.init
	- Use LSB output instead.

2007-11-20  Mario Limonciello <superm1@ubuntu.com>
	* dists/*
	- Update Maintainer on all dists
	- Add Uploaders field for all dists
	* dists/hardy
	- Add new target
	* dists/gutsy
	- Add DKMS support
	- Drop m-a support , as it conflicts with DKMS
	* dists/{feisty,gutsy}
	- Add diversions so that compiz can launch after discussing
	  with Ubuntu compiz maintainer.

2007-07-02  Aric Cyr  <Aric.Cyr@gmail.com>

	* dists/*/rules
	- make sure all apps have correct executable permissions

2007-05-02  Aric Cyr  <Aric.Cyr@gmail.com>

	* dists/gutsy
	- added Gutsy Gibbon distro and bumped other versions

2007-04-02  Aric Cyr  <Aric.Cyr@gmail.com>

	* dists
	- added new glesx.so and esut.a files to xorg/modules

2007-02-20  Aric Cyr  <Aric.Cyr@gmail.com>

	* dists/feisty
	- target added for upcoming Feisty/7.04 release
	* rules, control.template
	- replaced fireglcontrol with new amdcccle
	- removed fglrx-sources package since we won't ship the old
	control panel anymore
